--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "type": "git",
     "url": "git+https://github.com/shuding/nextra-docs-template.git"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
@@ -28,6 +28,9 @@
   "devDependencies": {
     "@types/node": "18.11.10",
     "@types/react": "18.2.37",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.9.3"
   }
 }
