--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "",
   "dependencies": {
     "next": "^13.0.6",
-    "nextra": "latest",
+    "nextra": "2.13.2",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
