--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "2.13.2",
-    "nextra-theme-docs": "latest",
+    "nextra-theme-docs": "2.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
