--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
           pnpm install --no-frozen-lockfile
           pnpm build
           ls -al
+          cd .next
       - name: Deploy
         uses: easingthemes/ssh-deploy@main
         env:
