--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+
+      - name: Set timezone to UTC+8
+        run: |
+          sudo timedatectl set-timezone Asia/Shanghai
+          echo "Timezone set to $(date)"
+
       - name: Build and Deploy
         run: |
           ls -al
