--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
             ARGS: "-rlgoDzvc -i"
             REMOTE_USER: ${{ secrets.REMOTE_USER }}
             REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-            SOURCE: "*"
+            SOURCE: ".*next/*"
             TARGET: /data/interview/home/
             EXCLUDE: node_modules/
             SCRIPT_AGTER: |
