--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,12 +33,14 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         env:
             SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-            ARGS: "-rlgoDzvc -i --include='.next/*'"
+            ARGS: "-rlgoDzvc -i"
             REMOTE_USER: ${{ secrets.REMOTE_USER }}
             REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
             SOURCE: "*"
             TARGET: /data/interview/home/
             EXCLUDE: node_modules/
+            INCLUDE: |
+              .next/
             SCRIPT_AGTER: |
               pnpm start
               echo 'done'
