--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,8 @@ jobs:
       - name: show dir
         run: |
           ls -l
-          echo ${{ secrets.DOCKER_REGISTRY }}
+          echo "${{ secrets.DOCKER_REGISTRY }}" > registry.txt
+          cat registry.txt
           echo ${{ secrets.DOCKER_USERNAME }}
           echo ${{ secrets.DOCKER_PASSWORD }}
       
