--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,10 +13,9 @@ jobs:
       - uses: actions/checkout@v4
       
       # 设置时间戳环境变量
-      - name: Set timezone to UTC+8
-        run: |
-          sudo timedatectl set-timezone Asia/Shanghai
-          echo "Timezone set to $(date)"
+      - name: Set timestamp
+        id: vars
+        run: echo "TIMESTAMP=$(date +%s)" >> $GITHUB_ENV
 
       - name: show dir
         run: |
